# ictis-medical-helper

./: Dockerfile  pyproject.toml
additional_services/postgresql/: connection_string_example.txt  docker-compose.yaml
src/: api_models.py  artificial_module.py  database.py  main.py  scaled_artificial_module.py
src/crawlers/medical_database/: scrapy.cfg
src/crawlers/medical_database/medical_database/: items.py  middlewares.py  pipelines.py  settings.py
src/crawlers/medical_database/medical_database/spiders/: smclinic.py
