[tool.poetry]
name = "ictis-medical-helper"
version = "1.0"
description = ""
authors = ["akrobut <ckspoks@gmail.com>"]
readme = "README.md"
packages = [{include = "ictis_medical_helper"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.2"
uvicorn = "^0.22.0"
scrapy = "^2.9.0"
sklearn = "^0.0.post5"
numpy = "^1.24.3"
sqlalchemy = "^2.0.15"
psycopg2-binary = "^2.9.6"
scikit-learn = "^1.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
